closes bpo-38803: Fix leak in posixmodule. (GH-17373)